# minecraft.rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md
authentication/: Cargo.toml
authentication/src/: error.rs  lib.rs  microsoft.rs  minecraft.rs  xbox.rs
authentication/src/account/: mod.rs
authentication/src/microsoft/: device.rs  grant.rs
authentication/src/utils/: mod.rs  query_string_builder.rs  time.rs
authentication/tests/: auth_over_device.rs
src/: error.rs  http.rs  lib.rs  mojang_time.rs
src/game_files/: mod.rs  version_manifest.rs  version_type.rs
src/game_files/assets/: asset_download.rs  data.rs  mod.rs
src/game_files/release/: argument.rs  data.rs  library.rs  mod.rs  rule.rs
src/microsoft_authentication/: microsoft.rs  minecraft.rs  mod.rs  xbox.rs
src/microsoft_authentication/account/: mod.rs
src/mojang_api/: mod.rs
src/profile/: mod.rs  public.rs
src/utils/: download.rs  mod.rs  serde_utils.rs
