[package]
name = "minecraft-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
reqwest = { version = "0.11.10", features = ["multipart", "json"] }
log = "0.4.16"
thiserror = "1.0.30"
chrono = { version = "0.4.19", features = ["serde"] }
sha-1 = "0.10.0"
substring = "1.4.5"
tokio = { version = "1.18.2", features = ["fs"] }
uuid = { version = "1.0.0", features = ["serde"] }
[features]
microsoft_authentication = []
account_api = []

game_files = []

mojang_api = []
profile_api = []

serialize_all = []
