[package]
name = "minecraft-rs"
version = "0.0.1"
authors = ["Wyatt Jacob Herkamp <wherkamp@gmail.com>"]
repository = "https://github.com/wyatt-herkamp/minecraft.rs"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["multipart", "json"] }
log = "0.4"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha-1 = "0.10"
tokio = { version = "1", features = ["fs"] }
uuid = { version = "1", features = ["serde"] }
url = "2"
[features]
serialize_all = []
