[package]
name = "minecraft-authentication"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
chrono.workspace = true
url.workspace = true
tracing.workspace = true
once_cell = "1"
[dev-dependencies]
anyhow = "1"
dotenv = "0.15.0"
tracing-subscriber.workspace = true

[lints]
workspace = true
